--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Sobre Nosotros</title>
-	<link rel="stylesheet" href="../Django/styles/styles.css">
-    <link rel="icon" href="../Django/imgs/favicon2.png">
+	<link rel="stylesheet" href="./Django/styles/styles.css">
+    <link rel="icon" href="./Django/imgs/favicon2.png">
 </head>
 <body>
 	<header>
